<resources>
    <string name="app_name">SEGAClient</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_user">Create User</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="access_request_for_group">Access Request for Group:</string>
    <string name="grant">GRANT</string>
    <string name="deny">DENY</string>
    <string name="request_access">Request Access</string>
    <string name="add_user_to_group">Add User To Group</string>
    <string name="upload_file">Upload File</string>
    <string name="yes">yes</string>
    <string name="cancel">cancel</string>
    <string name="createGroupActivityTitle">Create Group</string>
    <string-array name="loading_memes">
        <item>Constructing Additional Pylons</item>
        <item>Generating Super Secret Stuff</item>
        <item>Saddling Up</item>
        <item>Arming the Carrier Pigeons</item>
        <item>Testing Your Patience</item>
        <item>Rolling out the Red Carpet</item>
        <item>Sending out Smoke Signals</item>
        <item>Reticulating Splines</item>
        <item>Shufflin\' through them packets</item>
    </string-array>
</resources>
