<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.themonster.segaclient.GrantAuthorizationActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">

        <RelativeLayout
            android:id="@+id/promptLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/groupPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/access_request_for_group" />

            <TextView
                android:id="@+id/groupNameGrantAuthActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/groupPrompt"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/promptLayout"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="GrantAccess"
                android:text="@string/grant" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="DenyAccess"
                android:text="@string/deny" />
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
