<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/usernameCreateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:maxLength="@integer/max_field_length"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusForward="@id/passwordCreateUser">
            <requestFocus/>
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordCreateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:maxLength="@integer/max_field_length"
            android:inputType="textPassword"
            android:nextFocusForward="@id/passwordConfirmCreateUser"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordConfirmCreateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="@integer/max_field_length"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>



    <ProgressBar
        android:id="@+id/spinnyDoodleCreateUser"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <!--
    // for now, simply check if the group password matches. //Todo
    -->

</LinearLayout>

    <!--
    // tutorial from https://www.youtube.com/watch?v=CTBiwKlO5IU
    -->